# transcribeer

./: .gitignore  .swiftlint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  capture-bin  install.sh  pyproject.toml  skills-lock.json
Formula/: transcribeer.rb
capture/: .gitignore  Package.swift  capture.entitlements.plist
capture/Sources/CaptureCore/: AudioCapture.swift  AudioFileWriter.swift  WAVWriter.swift
capture/Sources/capture/: main.swift
capture/Tests/captureCoreTests/: AudioFileWriterTests.swift  WAVWriterTests.swift
gui/: Info.plist  Package.resolved  Package.swift
gui/Sources/TranscribeeMenuBar/: AppWatcher.swift  TranscribeeMenuBarApp.swift  TranscribeeRunner.swift
gui/Sources/TranscribeerApp/: AppDelegate.swift  TranscribeerApp.swift
gui/Sources/TranscribeerCLI/: main.swift
obsidian-plugin/: esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  settings.ts  tsconfig.json
scripts/: convert-ivrit-ai.sh
test-samples/ivrit-ai/: sample_30s_he.txt
tests/: test_capture.py  test_config.py  test_diarize.py  test_history_helpers.py  test_prompts.py  test_session.py  test_summarize.py  test_transcribe.py
transcribee/: __init__.py  capture.py  cli.py  config.py  diarize.py  gui.py  history_window.py  session.py  summarize.py  transcribe.py  webview_window.py
transcribee/ui/: shared.css
transcribeer/: capture.py  cli.py  config.py  diarize.py  gui.py  history_window.py  keychain.py  meta.py  prompts.py  session.py  settings_window.py  summarize.py  transcribe.py  webview_window.py
(+40 files in other folders)
