[project]
name = "transcribee"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "faster-whisper",
    "torch",
    "torchaudio",
    "requests",
]

[project.scripts]
transcribee = "transcribee.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
